Fixed: metagraph balances not showing on mobile

--- a/src/components/MetagraphTokensSection/components/MetagraphTokensBalances.module.scss
+++ b/src/components/MetagraphTokensSection/components/MetagraphTokensBalances.module.scss
@@ -188,12 +188,3 @@
     line-height: 15px;
   }
 }
-
-@include respond-below(xlg) {
-  .selectedOptionBalance{
-    display: none;
-  }
-  .amountList {
-    display: none;
-  }
-}
